Enhance script.js with detailed comments for clarity
- Added comprehensive comments throughout script.js to explain the functionality and structure.
- Improved code readability for better maintainability and future development.
- Ensured clear understanding for developers and stakeholders reviewing the code.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <!-- Privacy Policy Checkbox -->
             <div class="checkbox-container">
                 <input type="checkbox" id="privacyPolicy">
-                <label for="privacyPolicy">Agree with <a href="path_to_privacy_policy.html" target="_blank">Privacy
+                <label for="privacyPolicy">Agree with <a href="https://interactivityhub.com/privacy_policy/" target="_blank" rel="noopener noreferrer">Privacy
                         Policy</a></label>
             </div>
 
