--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Fonts -->
+    <!-- Link to Google Fonts for Roboto font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <!-- Title -->
+    <!-- Page Title -->
     <title>City-Country Match Game</title>
 
-    <!-- Stylesheet -->
+    <!-- Link to the external stylesheet -->
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -21,6 +21,7 @@
     <!-- ==========================
     INTRO MODAL
     ========================== -->
+    <!-- Modal that introduces the game to the user -->
     <div class="modal" id="introModal">
         <div class="modal-content">
             <h2>Welcome!</h2>
@@ -34,15 +35,16 @@
     <!-- ==========================
     GAME CONTAINER
     ========================== -->
+    <!-- Main container for the game -->
     <div class="game-container">
 
-        <!-- Timer and Replay Button -->
+        <!-- Display for the timer and a replay button -->
         <div class="game-info">
             <span id="timer">00:00</span>
             <button id="replay" class="hidden">Play Again</button>
         </div>
 
-        <!-- Game Board (Cards will be dynamically generated here) -->
+        <!-- Area where the game cards will be dynamically generated -->
         <div class="game-board">
             <!-- Cards will be generated and appended here by JavaScript -->
         </div>
@@ -51,31 +53,31 @@
     <!-- ==========================
     WIN MODAL WITH CONTACT FORM
     ========================== -->
+    <!-- Modal that appears when the user wins the game -->
     <div class="modal" id="winModal">
         <div class="modal-content">
-            <!-- Spinner will be added here by JavaScript -->
-            <!-- Time and rank will be added here by JavaScript -->
+            <!-- Spinner, time, and rank will be added dynamically by JavaScript -->
             
             <h2>Congratulations!</h2>
             <p>You have matched all the cities to the countries they belong.</p>
             <p>Please provide your name and email to receive information about our discounted offers</p>
 
-            <!-- Name Input -->
+            <!-- Input field for the user's first name -->
             <label for="firstName">First name</label>
             <input type="text" id="firstName">
 
-            <!-- Email Input -->
+            <!-- Input field for the user's email -->
             <label for="email">Email</label>
             <input type="email" id="email" required>
 
-            <!-- Privacy Policy Checkbox -->
+            <!-- Checkbox for agreeing to the privacy policy -->
             <div class="checkbox-container">
                 <input type="checkbox" id="privacyPolicy">
                 <label for="privacyPolicy">Agree with <a href="https://interactivityhub.com/privacy_policy/" target="_blank" rel="noopener noreferrer">Privacy
                         Policy</a></label>
             </div>
 
-            <!-- Send Button -->
+            <!-- Button to send the user's data -->
             <button id="sendData" class="disabled-button" style="display: block; margin: 0 auto;" disabled>Send</button>
         </div>
     </div>
@@ -83,21 +85,22 @@
     <!-- ==========================
     THANK YOU MODAL
     ========================== -->
+    <!-- Modal that thanks the user after they've submitted their data -->
     <div class="modal" id="thankYouModal">
         <div class="modal-content" id="thankYouContent">
-            <!-- Header Image -->
+            <!-- Image at the top of the modal -->
             <img src="images/happy.jpeg" alt="Header Image" class="header-image">
 
-            <!-- Thank You Message -->
+            <!-- Message thanking the user -->
             <h2>Thank you!</h2>
             <p>We hope you had an enjoyable experience here.</p>
 
-            <!-- Restart Button -->
+            <!-- Button to restart the game -->
             <button id="restartGame">&#x21BB; Restart</button>
         </div>
     </div>
 
-    <!-- JavaScript -->
+    <!-- Link to the external JavaScript file -->
     <script src="script.js"></script>
 </body>
 
