reallignemnt of the html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <!-- Modal that introduces the game to the user -->
     <div class="modal" id="introModal">
         <div class="modal-content">
-            <h2>Welcome!</h2>
             <p>Can you match cities to the countries they belong?</p>
             <div class="modal-buttons">
                 <button id="startGame">Yes</button>
@@ -57,7 +56,7 @@
     <div class="modal" id="winModal">
         <div class="modal-content">
             <!-- Spinner, time, and rank will be added dynamically by JavaScript -->
-            
+
             <h2>Congratulations!</h2>
             <p>You have matched all the cities to the countries they belong.</p>
             <p>Please provide your name and email to receive information about our discounted offers</p>
@@ -73,7 +72,8 @@
             <!-- Checkbox for agreeing to the privacy policy -->
             <div class="checkbox-container">
                 <input type="checkbox" id="privacyPolicy">
-                <label for="privacyPolicy">Agree with <a href="https://interactivityhub.com/privacy_policy/" target="_blank" rel="noopener noreferrer">Privacy
+                <label for="privacyPolicy">Agree with <a href="https://interactivityhub.com/privacy_policy/"
+                        target="_blank" rel="noopener noreferrer">Privacy
                         Policy</a></label>
             </div>
 
